// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hyperlink-text.ts: Link: edit text to display with comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://product-fabric.atlassian.net/browse/FAB-983",
              },
              "type": "link",
            },
          ],
          "text": "FAB-983 P2 Integration plugin: do not cache Cloud ID in Vertigo world",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://hello.com",
              },
              "type": "link",
            },
          ],
          "text": "mmm",
          "type": "text",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`hyperlink-text.ts: Link: edit text to display with fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://product-fabric.atlassian.net/browse/FAB-983",
              },
              "type": "link",
            },
          ],
          "text": "FAB-983 P2 Integration plugin: do not cache Cloud ID in Vertigo world",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://hello.com",
              },
              "type": "link",
            },
          ],
          "text": "mmm",
          "type": "text",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`hyperlink-text.ts: Link:edit with comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://product-fabric.atlassian.net/browse/FAB-983",
              },
              "type": "link",
            },
          ],
          "text": "FAB-983 P2 Integration plugin: do not cache Cloud ID in Vertigo worldmmm",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`hyperlink-text.ts: Link:edit with fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://product-fabric.atlassian.net/browse/FAB-983",
              },
              "type": "link",
            },
          ],
          "text": "FAB-983 P2 Integration plugin: do not cache Cloud ID in Vertigo worldmmm",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
